<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imgButton1"
        android:layout_width="55dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo6"
        app:srcCompat="@drawable/b1" />

    <ImageButton
        android:id="@+id/imgButton2"
        android:layout_width="55dp"
        android:layout_height="56dp"
        android:layout_alignLeft="@+id/imgButton1"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imgButton1"
        android:layout_marginTop="159dp"
        android:contentDescription="@string/todo2"
        app:srcCompat="@drawable/b2" />

    <ImageButton
        android:id="@+id/imgButton3"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imgButton1"
        android:layout_alignLeft="@+id/imgButton1"
        android:layout_marginBottom="184dp"
        android:contentDescription="@string/todo4"
        app:srcCompat="@drawable/b3" />

    <ImageButton
        android:id="@+id/imgButton4"
        android:layout_width="58dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imgButton1"
        android:layout_alignLeft="@+id/imgButton1"
        android:layout_marginBottom="67dp"
        android:contentDescription="@string/todo8"
        app:srcCompat="@drawable/b4" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imgButton1"
        android:layout_alignLeft="@+id/imgButton1"
        android:layout_marginTop="123dp"
        android:text="@string/light_1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imgButton1"
        android:layout_alignLeft="@+id/imgButton1"
        android:layout_marginTop="229dp"
        android:text="@string/light_2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imgButton1"
        android:layout_alignLeft="@+id/imgButton1"
        android:layout_marginBottom="151dp"
        android:text="@string/light_3"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imgButton1"
        android:layout_alignLeft="@+id/imgButton1"
        android:layout_marginBottom="34dp"
        android:text="@string/light_4"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imgButtonup"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imgButton1"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:contentDescription="@string/todo19"
        app:srcCompat="@drawable/caretarrowup" />

    <ImageButton
        android:id="@+id/imgButtondown"
        android:layout_width="63dp"
        android:layout_height="39dp"
        android:layout_alignStart="@+id/imgButtonup"
        android:layout_alignLeft="@+id/imgButtonup"
        android:layout_below="@+id/imgButton2"
        android:contentDescription="@string/todo18"
        app:srcCompat="@drawable/caretdown" />

    <ImageButton
        android:id="@+id/imgButtonfan"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/imgButtonup"
        android:layout_alignLeft="@+id/imgButtonup"
        android:layout_below="@+id/imgButton1"
        android:contentDescription="@string/todo1"
        app:srcCompat="@drawable/fan" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imgButtonup"
        android:layout_alignRight="@+id/imgButtonup"
        android:layout_alignParentTop="true"
        android:layout_marginTop="173dp"
        android:text="@string/fan"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imgButtonallon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imgButtonup"
        android:layout_alignLeft="@+id/imgButtonup"
        android:layout_marginBottom="164dp"
        android:contentDescription="@string/todo5"
        app:srcCompat="@drawable/on" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imgButtonup"
        android:layout_alignLeft="@+id/imgButtonup"
        android:layout_marginBottom="137dp"
        android:text="@string/all_on"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignEnd="@+id/textView6"
        android:layout_alignRight="@+id/textView6"
        android:text="@string/all_off"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imgButtonalloff"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignStart="@+id/imgButtonup"
        android:layout_alignTop="@+id/imgButton4"
        android:contentDescription="@string/todo11"
        app:srcCompat="@drawable/off" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ambience"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


</RelativeLayout>